Moved entire site to production

--- a/portfolio/ranking-for-non-branded-keywords/index.html
+++ b/portfolio/ranking-for-non-branded-keywords/index.html
@@ -2,29 +2,49 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-R5YXDWMZEV');
+    </script>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Achieving SEO Market Leadership with Innovative Strategies</title>
-    <meta content=" Discover how a decade of SEO expertise was leveraged to dominate competitive markets, achieving top rankings and setting new standards in organic search." name="description">
-    <meta content="SEO strategy, market domination, competitive keywords, website optimization, content mapping, page load speed, technical SEO, leadership in SEO" name="keywords">
+    <meta
+        content=" Discover how a decade of SEO expertise was leveraged to dominate competitive markets, achieving top rankings and setting new standards in organic search."
+        name="description">
+    <meta
+        content="SEO strategy, market domination, competitive keywords, website optimization, content mapping, page load speed, technical SEO, leadership in SEO"
+        name="keywords">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Daine Dvorak">
     <link rel="canonical" href="https://dainedvorak.com/portfolio/leadership-and-management/index.html" />
     <!-- Favicons -->
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="https://dainedvorak.com/assets/favicon_resources/prod/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-16x16.png">
-  <link rel="manifest" href="https://dainedvorak.com/assets/favicon_resources/prod/site.webmanifest">
-  <link rel="mask-icon" href="https://dainedvorak.com/assets/favicon_resources/prod/safari-pinned-tab.svg" color="#0066ff">
-  <link rel="shortcut icon" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon.ico">
-  <meta name="msapplication-TileColor" content="#0066ff">
-  <meta name="msapplication-TileImage" content="https://dainedvorak.com/assets/favicon_resources/prod/mstile-144x144.png">
-  <meta name="msapplication-config" content="https://dainedvorak.com/assets/favicon_resources/prod/browserconfig.xml">
-  <meta name="theme-color" content="#0066ff">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="194x194"
+        href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-194x194.png">
+    <link rel="icon" type="image/png" sizes="192x192"
+        href="https://dainedvorak.com/assets/favicon_resources/prod/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-16x16.png">
+    <link rel="manifest" href="https://dainedvorak.com/assets/favicon_resources/prod/site.webmanifest">
+    <link rel="mask-icon" href="https://dainedvorak.com/assets/favicon_resources/prod/safari-pinned-tab.svg"
+        color="#0066ff">
+    <link rel="shortcut icon" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon.ico">
+    <meta name="msapplication-TileColor" content="#0066ff">
+    <meta name="msapplication-TileImage"
+        content="https://dainedvorak.com/assets/favicon_resources/prod/mstile-144x144.png">
+    <meta name="msapplication-config" content="https://dainedvorak.com/assets/favicon_resources/prod/browserconfig.xml">
+    <meta name="theme-color" content="#0066ff">
 
 
     <!-- Google Fonts -->
@@ -135,59 +155,71 @@
     <!-- ======= Mobile nav toggle button ======= -->
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
- <!-- ======= Header ======= -->
- <header id="header">
-    <div class="d-flex flex-column">
- 
-      <div class="profile">
-        <img src="https://dainedvorak.com/images/profile-img.jpg" alt="Daine Dvorak professional headshot" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="https://dainedvorak.com/index.html" target="_blank">Daine Dvorak</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://bit.ly/DainesLinkedIn" target="_blank" class="facebook"><i class="bx bxl-facebook"></i>
-          </a>
-          <a href="https://bit.ly/DaineDLinkedIn2" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i>
-          </a>
-          <a href="https://bit.ly/DDGitHub" target="_blank" class="github"><i class="bx bxl-github"></i>
-          </a>
-          <a href="https://www.youtube.com/channel/UCFyLSK8FIbfsw4VSPicd3qw" target="_blank" class="youtube"><i
-              class="bx bxl-youtube"></i>
-          </a>
- 
+    <!-- ======= Header ======= -->
+    <header id="header">
+        <div class="d-flex flex-column">
+
+            <div class="profile">
+                <img src="https://dainedvorak.com/images/profile-img.jpg" alt="Daine Dvorak professional headshot"
+                    class="img-fluid rounded-circle">
+                <h1 class="text-light"><a href="https://dainedvorak.com/index.html" target="_blank">Daine Dvorak</a>
+                </h1>
+                <div class="social-links mt-3 text-center">
+                    <a href="https://bit.ly/DainesLinkedIn" target="_blank" class="facebook"><i
+                            class="bx bxl-facebook"></i>
+                    </a>
+                    <a href="https://bit.ly/DaineDLinkedIn2" target="_blank" class="linkedin"><i
+                            class="bx bxl-linkedin"></i>
+                    </a>
+                    <a href="https://bit.ly/DDGitHub" target="_blank" class="github"><i class="bx bxl-github"></i>
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCFyLSK8FIbfsw4VSPicd3qw" target="_blank"
+                        class="youtube"><i class="bx bxl-youtube"></i>
+                    </a>
+
+                </div>
+            </div>
+
+            <nav id="navbar" class="nav-menu navbar">
+                <ul>
+                    <li><a href="https://dainedvorak.com/" class="nav-link scrollto active"><i class="bx bx-home"></i>
+                            <span>Home</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#about" class="nav-link scrollto"><i
+                                class="bx bx-user"></i>
+                            <span>About Me</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#skills" class="nav-link scrollto"><i
+                                class="bx bx-server"></i>
+                            <span>My Skills</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#resume" class="nav-link scrollto"><i
+                                class="bx bx-file-blank"></i>
+                            <span>Resumes</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#portfolio" class="nav-link scrollto"><i
+                                class="bx bx-book-content"></i>
+                            <span>Portfolio</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#testimonials" class="nav-link scrollto"><i
+                                class="bx bx-user-voice"></i>
+                            <span>Testimonials</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#schoolDD" class="nav-link scrollto"><i
+                                class="bx bx-bus-school"></i>
+                            <span>Education</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#workHistorydd" class="nav-link scrollto"><i
+                                class="bx bx-briefcase"></i>
+                            <span>Work History</span></a></li>
+
+                    <li><a href="https://dainedvorak.com/index.html#contact" class="nav-link scrollto"><i
+                                class="bx bx-envelope"></i>
+                            <span>Contact</span></a></li>
+                </ul>
+            </nav><!-- .nav-menu -->
         </div>
-      </div>
- 
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="https://dainedvorak.com/" class="nav-link scrollto active"><i class="bx bx-home"></i>
-              <span>Home</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#about" class="nav-link scrollto"><i class="bx bx-user"></i>
-              <span>About Me</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i>
-              <span>My Skills</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i>
-              <span>Resumes</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
-              <span>Portfolio</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#testimonials" class="nav-link scrollto"><i class="bx bx-user-voice"></i>
-              <span>Testimonials</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#schoolDD" class="nav-link scrollto"><i class="bx bx-bus-school"></i>
-              <span>Education</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#workHistorydd" class="nav-link scrollto"><i class="bx bx-briefcase"></i>
-              <span>Work History</span></a></li>
- 
-          <li><a href="https://dainedvorak.com/index3.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
-              <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
+    </header><!-- End Header -->
 
     <main id="main">
 
@@ -231,7 +263,7 @@
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg">
-                       <!--  <div class="portfolio-details-slider swiper">
+                        <!--  <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
@@ -298,32 +330,44 @@
         <section class="bsb-cta-2 mb-5">
             <div class="container-fluid">
                 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-                <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/ctas/cta-2/assets/css/cta-2.css" />                     
-               <div class="card border-0 rounded-3 overflow-hidden text-center bsb-overlay"
-                  style="background-image: url('https://dainedvorak.com/images/cta-background/cta-background-6-100.jpg'); background-position: left center; --bsb-overlay-opacity: .5; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
-                  <div class="card-body mb-5">
-                     <div class="row align-items-center justify-content-center">
-                        <div class="col-12 col-md-10 col-xl-8 col-xxl-7">
-                           <h2 class="h5 mb-4 text-white text-uppercase">
-                            Your search ends here. Send a Message Today!
-                        </h2>
-                           <h3 class="display-4 text-white fw-bold mb-5">
-                            Seeking exceptional talent for your team?
-                        </h3>
-                           <div class="btn-group">
-                              <a href="tel:19132294694" class="btn btn-warning bsb-btn-3xl rounded mb-0 text-nowrap shadow" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
-        <br>
-                              <a href="https://dainedvorak.com/contact-me/index.html" class="btn btn-Light shadow bsb-btn-3xl rounded mb-0 text-nowrap" style="margin-right: 5px;  background-color: #fff;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
-                              <a href="https://bit.ly/DDLinkedin" class="btn btn-primary bsb-btn-3xl shadow rounded mb-0 text-nowrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png" style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
-                           </div>
+                <link rel="stylesheet"
+                    href="https://unpkg.com/bs-brain@2.0.3/components/ctas/cta-2/assets/css/cta-2.css" />
+                <div class="card border-0 rounded-3 overflow-hidden text-center bsb-overlay"
+                    style="background-image: url('https://dainedvorak.com/images/cta-background/cta-background-6-100.jpg'); background-position: left center; --bsb-overlay-opacity: .5; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
+                    <div class="card-body mb-5">
+                        <div class="row align-items-center justify-content-center">
+                            <div class="col-12 col-md-10 col-xl-8 col-xxl-7">
+                                <h2 class="h5 mb-4 text-white text-uppercase">
+                                    Your search ends here. Send a Message Today!
+                                </h2>
+                                <h3 class="display-4 text-white fw-bold mb-5">
+                                    Seeking exceptional talent for your team?
+                                </h3>
+                                <div class="btn-group">
+                                    <a href="tel:19132294694"
+                                        class="btn btn-warning bsb-btn-3xl rounded mb-0 text-nowrap shadow"
+                                        style="margin-right: 5px;"><img
+                                            src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png"
+                                            style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
+                                    <br>
+                                    <a href="https://dainedvorak.com/contact-me/index.html"
+                                        class="btn btn-Light shadow bsb-btn-3xl rounded mb-0 text-nowrap"
+                                        style="margin-right: 5px;  background-color: #fff;"><img
+                                            src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png"
+                                            style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
+                                    <a href="https://bit.ly/DDLinkedin"
+                                        class="btn btn-primary bsb-btn-3xl shadow rounded mb-0 text-nowrap"><img
+                                            src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png"
+                                            style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
+                                </div>
+                            </div>
                         </div>
-                     </div>
-                  </div>
-               </div>
+                    </div>
+                </div>
             </div>
-         </section>
+        </section>
     </main><!-- End #main -->
-    
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="container">
