--- a/portfolio/seo-technical-audit-automated-workbook/index.html
+++ b/portfolio/seo-technical-audit-automated-workbook/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+   <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-R5YXDWMZEV');
+   </script>
    <meta charset="utf-8">
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
    <title>Revolutionizing SEO Audits with Automated Technical Template</title>
@@ -14,19 +23,26 @@
    <meta name="robots" content="index, follow">
    <meta name="author" content="Daine Dvorak">
    <!-- Favicons -->
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="https://dainedvorak.com/assets/favicon_resources/prod/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-16x16.png">
-  <link rel="manifest" href="https://dainedvorak.com/assets/favicon_resources/prod/site.webmanifest">
-  <link rel="mask-icon" href="https://dainedvorak.com/assets/favicon_resources/prod/safari-pinned-tab.svg" color="#0066ff">
-  <link rel="shortcut icon" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon.ico">
-  <meta name="msapplication-TileColor" content="#0066ff">
-  <meta name="msapplication-TileImage" content="https://dainedvorak.com/assets/favicon_resources/prod/mstile-144x144.png">
-  <meta name="msapplication-config" content="https://dainedvorak.com/assets/favicon_resources/prod/browserconfig.xml">
-  <meta name="theme-color" content="#0066ff">
+   <!-- Favicons -->
+   <link rel="apple-touch-icon" sizes="180x180"
+      href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32"
+      href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="194x194"
+      href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-194x194.png">
+   <link rel="icon" type="image/png" sizes="192x192"
+      href="https://dainedvorak.com/assets/favicon_resources/prod/android-chrome-192x192.png">
+   <link rel="icon" type="image/png" sizes="16x16"
+      href="https://dainedvorak.com/assets/favicon_resources/prod/favicon-16x16.png">
+   <link rel="manifest" href="https://dainedvorak.com/assets/favicon_resources/prod/site.webmanifest">
+   <link rel="mask-icon" href="https://dainedvorak.com/assets/favicon_resources/prod/safari-pinned-tab.svg"
+      color="#0066ff">
+   <link rel="shortcut icon" href="https://dainedvorak.com/assets/favicon_resources/prod/favicon.ico">
+   <meta name="msapplication-TileColor" content="#0066ff">
+   <meta name="msapplication-TileImage"
+      content="https://dainedvorak.com/assets/favicon_resources/prod/mstile-144x144.png">
+   <meta name="msapplication-config" content="https://dainedvorak.com/assets/favicon_resources/prod/browserconfig.xml">
+   <meta name="theme-color" content="#0066ff">
    <!-- Google Fonts -->
    <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -159,35 +175,35 @@
                <li><a href="https://dainedvorak.com/" class="nav-link scrollto"><i class="bx bx-home"></i>
                      <span>Home</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#about" class="nav-link scrollto"><i
+               <li><a href="https://dainedvorak.com/index.html#about" class="nav-link scrollto"><i
                         class="bx bx-user"></i>
                      <span>About Me</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#skills" class="nav-link scrollto"><i
+               <li><a href="https://dainedvorak.com/index.html#skills" class="nav-link scrollto"><i
                         class="bx bx-server"></i>
                      <span>My Skills</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#resume" class="nav-link scrollto "><i
+               <li><a href="https://dainedvorak.com/index.html#resume" class="nav-link scrollto "><i
                         class="bx bx-file-blank"></i>
                      <span>Resumes</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#portfolio" class="nav-link scrollto active"><i
+               <li><a href="https://dainedvorak.com/index.html#portfolio" class="nav-link scrollto active"><i
                         class="bx bx-book-content"></i>
                      <span>Portfolio</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#testimonials" class="nav-link scrollto"><i
+               <li><a href="https://dainedvorak.com/index.html#testimonials" class="nav-link scrollto"><i
                         class="bx bx-user-voice"></i>
                      <span>Testimonials</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#schoolDD" class="nav-link scrollto"><i
+               <li><a href="https://dainedvorak.com/index.html#schoolDD" class="nav-link scrollto"><i
                         class="bx bx-bus-school"></i>
                      <span>Education</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#workHistorydd" class="nav-link scrollto"><i
+               <li><a href="https://dainedvorak.com/index.html#workHistorydd" class="nav-link scrollto"><i
                         class="bx bx-briefcase"></i>
                      <span>Work History</span></a></li>
 
-               <li><a href="https://dainedvorak.com/index3.html#contact" class="nav-link scrollto"><i
+               <li><a href="https://dainedvorak.com/index.html#contact" class="nav-link scrollto"><i
                         class="bx bx-envelope"></i>
                      <span>Contact</span></a></li>
             </ul>
