--- a/.archive/template-page-for-all-showcases.html
+++ b/.archive/template-page-for-all-showcases.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R5YXDWMZEV');
+</script>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <title>Daine Dvorak's Portfolio - 2024 - Home</title>
