--- a/assets/error-pages/400.html
+++ b/assets/error-pages/400.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R5YXDWMZEV');
+</script>
   <meta charset="UTF-8">
   <title>HTTP Status: 400 Error Page | DaineDvorak.com </title>
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
