pushed to production

--- a/assets/error-pages/401.html
+++ b/assets/error-pages/401.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
 <script>
@@ -11,7 +12,7 @@
 
   gtag('config', 'G-R5YXDWMZEV');
 </script>
-  <meta charset="UTF-8">
+  
   <title>HTTP Status: 401 Error Page | Daine Dvorak</title>
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
