--- a/images/cta-background/cta-template.html
+++ b/images/cta-background/cta-template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
 <script>
@@ -10,7 +11,7 @@
 
   gtag('config', 'G-R5YXDWMZEV');
 </script>
-<meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
