--- a/.archive/showcase-details-template.html
+++ b/.archive/showcase-details-template.html
@@ -2,6 +2,21 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "l2wzfsipff");
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "l2wzfsipff");
+</script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
 <script>
@@ -11,7 +26,7 @@
 
   gtag('config', 'G-R5YXDWMZEV');
 </script>
-  <meta charset="utf-8">
+  
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Daine Dvorak's Portfolio - 2024 - Home</title>
