--- a/assets/error-pages/404.html
+++ b/assets/error-pages/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+<meta charset="utf-8">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
 <script>
@@ -10,7 +11,7 @@
 
   gtag('config', 'G-R5YXDWMZEV');
 </script>
-  <meta charset="UTF-8">
+  
   <title>HTTP Status: 404 Error Page | DaineDvorak.com </title>
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 <script>
