--- a/assets/error-pages/500.html
+++ b/assets/error-pages/500.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+<meta charset="utf-8">
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "l2wzfsipff");
+</script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
 <script>
@@ -10,7 +18,7 @@
 
   gtag('config', 'G-R5YXDWMZEV');
 </script>
-  <meta charset="UTF-8">
+  
   <title>HTTP Status: 500 Error Page | DaineDvorak.com </title>
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 <script>
