--- a/portfolio/google-app-scripts/index.html
+++ b/portfolio/google-app-scripts/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
    <script>
@@ -11,7 +12,7 @@
 
       gtag('config', 'G-R5YXDWMZEV');
    </script>
-   <meta charset="utf-8">
+   
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
    <title>Empowering Efficiency: Advanced Automation with Google App Scripts</title>
    <meta
@@ -391,7 +392,7 @@
                            Transform your challenges into opportunities.
                         </h3>
                         <div class="btn-group">
-                           <a href="tel:19132294694" class="btn btn-warning bsb-btn-3xl rounded mb-0 text-nowrap shadow"
+                           <a href="tel:19132294694" class="btn btn-warning bsb-btn-3xl rounded mb-0 shadow"
                               style="margin-right: 5px;"><img
                                  src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png"
                                  style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
