--- a/portfolio/leadership-and-management/index.html
+++ b/portfolio/leadership-and-management/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
    <script>
@@ -11,7 +12,7 @@
 
       gtag('config', 'G-R5YXDWMZEV');
    </script>
-   <meta charset="utf-8">
+   
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
    <title>Leadership & Management - Daine Dvorak's Portfolio</title>
    <meta
@@ -296,10 +297,6 @@
             together.</p>
       </div>
       <!-- End Portfolio Details Section -->
-
-
-   </main>
-   <section class="bsb-cta-2 mb-5">
       <div class="container-fluid">
          <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
          <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/ctas/cta-2/assets/css/cta-2.css" />
@@ -316,7 +313,7 @@
 
                      </h3>
                      <div class="btn-group">
-                        <a href="tel:19132294694" class="btn btn-success bsb-btn-3xl rounded mb-0 text-nowrap shadow"
+                        <a href="tel:19132294694" class="btn btn-success bsb-btn-3xl rounded mb-0 shadow"
                            style="margin-right: 5px;"><img
                               src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png"
                               style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
@@ -336,6 +333,10 @@
             </div>
          </div>
       </div>
+
+   </main>
+   <section class="bsb-cta-2 mb-5">
+      
    </section>
    <!-- End #main -->
    <!-- ======= Footer ======= -->
