--- a/portfolio/ranking-for-non-branded-keywords/index.html
+++ b/portfolio/ranking-for-non-branded-keywords/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
     <script>
@@ -11,7 +12,7 @@
 
         gtag('config', 'G-R5YXDWMZEV');
     </script>
-    <meta charset="utf-8">
+    
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Achieving SEO Market Leadership with Innovative Strategies</title>
@@ -343,23 +344,18 @@
                                 <h3 class="display-4 text-white fw-bold mb-5">
                                     Seeking exceptional talent for your team?
                                 </h3>
-                                <div class="btn-group">
-                                    <a href="tel:19132294694"
-                                        class="btn btn-warning bsb-btn-3xl rounded mb-0 text-nowrap shadow"
-                                        style="margin-right: 5px;"><img
-                                            src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png"
-                                            style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
-                                    <br>
-                                    <a href="https://dainedvorak.com/contact-me/index.html"
-                                        class="btn btn-Light shadow bsb-btn-3xl rounded mb-0 text-nowrap"
-                                        style="margin-right: 5px;  background-color: #fff;"><img
-                                            src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png"
-                                            style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
-                                    <a href="https://bit.ly/DDLinkedin"
-                                        class="btn btn-primary bsb-btn-3xl shadow rounded mb-0 text-nowrap"><img
-                                            src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png"
-                                            style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
+                                <div class="btn-group d-flex flex-column flex-sm-row">
+                                    <a href="tel:19132294694" class="btn btn-warning bsb-btn-3xl rounded mb-2 mb-sm-0 shadow" style="margin-right: 5px;">
+                                        <img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Call Now!
+                                    </a>
+                                    <a href="https://dainedvorak.com/contact-me/index.html" class="btn btn-Light shadow bsb-btn-3xl rounded mb-2 mb-sm-0" style="margin-right: 5px; background-color: #fff;">
+                                        <img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Send An Email!
+                                    </a>
+                                    <a href="https://bit.ly/DDLinkedin" class="btn btn-primary bsb-btn-3xl shadow rounded mb-0">
+                                        <img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png" style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn
+                                    </a>
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
