--- a/portfolio/seo-technical-audit-automated-workbook/index.html
+++ b/portfolio/seo-technical-audit-automated-workbook/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta charset="utf-8">
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
    <script>
@@ -11,7 +12,7 @@
 
       gtag('config', 'G-R5YXDWMZEV');
    </script>
-   <meta charset="utf-8">
+   
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
    <title>Revolutionizing SEO Audits with Automated Technical Template</title>
    <meta
@@ -347,6 +348,34 @@
          </div>
       </section>
       <!-- End Portfolio Details Section -->
+      <section class="bsb-cta-2 mb-5">
+         <div class="container-fluid">
+             <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+             <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/ctas/cta-2/assets/css/cta-2.css" />                     
+            <div class="card border-0 rounded-3 overflow-hidden text-center bsb-overlay"
+               style="background-image: url('https://dainedvorak.com/images/cta-background/cta-background-7-100.jpg'); background-position: left center; --bsb-overlay-opacity: .5; --bsb-overlay-bg-color:var(--bs-primary-rgb);">
+               <div class="card-body mb-5">
+                  <div class="row align-items-center justify-content-center">
+                     <div class="col-12 col-md-10 col-xl-8 col-xxl-7">
+                        <h2 class="h5 mb-4 text-white text-uppercase">
+                         Let's explore possibilities, and discuss opportunities today!
+                     </h2>
+                        <h3 class="display-4 text-white  fw-bold mb-5">
+                         Experience the difference expertise can make. 
+     
+                     </h3>
+                        <div class="btn-group">
+                           <a href="tel:19132294694" class="btn btn-warning bsb-btn-3xl rounded mb-0 text-wrap shadow" style="margin-right: 5px;"><img src="https://dainedvorak.com/cdn-net/icons/cta-phone-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Call Now!</a>
+     <br>
+                           <a href="https://dainedvorak.com/contact-me/index.html" class="btn btn-Light shadow bsb-btn-3xl rounded mb-0 text-wrap" style="margin-right: 5px;  background-color: #fff;"><img src="https://dainedvorak.com/cdn-net/icons/cta-mail-icon.png" style="height: 40px; width: auto; margin-right: 5px;">Send An Email!</a>
+                           <a href="https://bit.ly/DDLinkedin" class="btn btn-info bsb-btn-3xl shadow rounded mb-0 text-wrap"><img src="https://dainedvorak.com/cdn-net/icons/cta-linkedin-icon.png" style="height: 40px; width: auto; margin-right: 5px;">View LinkedIn</a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
    </main>
    <!-- End #main -->
    <!-- ======= Footer ======= -->
