--- a/portfolio/ranking-for-non-branded-keywords/index.html
+++ b/portfolio/ranking-for-non-branded-keywords/index.html
@@ -24,7 +24,7 @@
         name="keywords">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Daine Dvorak">
-    <link rel="canonical" href="https://dainedvorak.com/portfolio/leadership-and-management/index.html" />
+    <link rel="canonical" href="https://dainedvorak.com/portfolio/ranking-for-non-branded-keywords/" />
     <!-- Favicons -->
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180"
