--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <link rel="canonical" href="https://dainedvorak.com/index.html" />
   <meta name="robots" content="index, follow">
   <meta name="author" content="Daine Dvorak">
-
+  <!-- Template Main CSS File -->
+  <link async href="https://dainedvorak.com/assets/css/style.css" rel="stylesheet">
   <!-- Social Media Open-Graph Meta Tags     START    -->
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://dainedvorak.com">
@@ -81,8 +82,7 @@
   <link href="https://dainedvorak.com/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="https://dainedvorak.com/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="https://dainedvorak.com/assets/css/style.css" rel="stylesheet">
+
 
 </head>
 
@@ -206,7 +206,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section async id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Daine Dvorak</h1>
       <p>I'm a Seasoned <span class="typed"
@@ -1124,7 +1124,7 @@
                     Specilists - Comprehensive Resume</h5>
                   <p class="card-text">This resume is Comprehensive Resume of all my skills, achievements, work
                     history, and more!</p>
-                  <a href="https://dainedvorak.com/cdn-net/resumes/director-of-seo-and-technical-seo-expert-daine-dvorak--generic.pdf"
+                  <a href="https://dainedvorak.com/cdn-net/resumes/daine-dvorak-resume-director-of-seo-and-technical-seo-expert-generic.pdf"
                     class="btn btn-success" target="_blank">Download Resume</a>
                 </div>
               </div>
