--- a/portfolio/development-coding-skills/index.html
+++ b/portfolio/development-coding-skills/index.html
@@ -22,7 +22,7 @@
       content="web development, server optimization, AI-driven development, technical audits, schema strategy, SEO, AWS EC2, LAMP stack, coding excellence, project efficiency"
       name="keywords">
    <meta name="robots" content="index, follow">
-   <link rel="canonical" href="https://dainedvorak.com/portfolio/development-coding-skills/" />
+   <link rel="canonical" href="https://dainedvorak.com/portfolio/development-coding-skills/index.html" />
    <meta name="author" content="Daine Dvorak">
    <!-- Favicons -->
    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_resources/prod/apple-touch-icon.png">
