--- a/portfolio/google-app-scripts/index.html
+++ b/portfolio/google-app-scripts/index.html
@@ -21,7 +21,7 @@
    <meta
       content="Google App Scripts, process automation, digital transformation, SEO optimization, technical SEO, automation in digital marketing, operational efficiency, content management automation"
       name="keywords">
-      <link rel="canonical" href="https://dainedvorak.com/portfolio/google-app-scripts/" />
+      <link rel="canonical" href="https://dainedvorak.com/portfolio/google-app-scripts/index.html" />
    <meta name="robots" content="index, follow">
    <meta name="author" content="Daine Dvorak">
    <!-- Favicons -->
