--- a/portfolio/seo-technical-audit-automated-workbook/index.html
+++ b/portfolio/seo-technical-audit-automated-workbook/index.html
@@ -22,6 +22,7 @@
       content="SEO technical audit, automation, Google App Scripts, website performance, crawl errors, site speed optimization, security, SEO best practices, technical SEO expertise"
       name="keywords">
    <meta name="robots" content="index, follow">
+   <link rel="canonical" href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/index.html" />
    <meta name="author" content="Daine Dvorak">
    <!-- Favicons -->
    <!-- Favicons -->
