--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "l2wzfsipff");
-</script>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5YXDWMZEV"></script>
   <script>
@@ -21,7 +15,7 @@
   </script>
   
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <link
+  <link async
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
   <meta
@@ -83,7 +77,13 @@
   <link href="https://dainedvorak.com/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 
-
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "l2wzfsipff");
+</script>
 </head>
 
 <body>
