--- a/portfolio/custom-chatgpt-model_schema-generator/index.html
+++ b/portfolio/custom-chatgpt-model_schema-generator/index.html
@@ -23,7 +23,7 @@
       name="keywords">
    <meta name="robots" content="index, follow">
    <meta name="author" content="Daine Dvorak">
-   <link rel="canonical" href="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/"> />
+   <link rel="canonical" href="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/index.html"> />
    <!-- Favicons -->
    <link rel="apple-touch-icon" sizes="180x180"
       href="https://dainedvorak.com/assets/favicon_resources/prod/apple-touch-icon.png">
