--- a/portfolio/seo-process-automation/index.html
+++ b/portfolio/seo-process-automation/index.html
@@ -23,7 +23,7 @@
       name="keywords">
    <meta name="robots" content="index, follow">
    <meta name="author" content="Daine Dvorak">
-   <link rel="canonical" href="https://dainedvorak.com/portfolio/seo-process-automation/" />
+   <link rel="canonical" href="https://dainedvorak.com/portfolio/seo-process-automation/index.html" />
    <!-- Favicons -->
    <!-- Favicons -->
    <link rel="apple-touch-icon" sizes="180x180"
