--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i>
               <span>About Me</span></a></li>
 
+          <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-server"></i>
+                <span>Work Achievements</span></a></li>
+
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i>
               <span>My Skills</span></a></li>
 
